add unordered list

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
 <body>
   <p>Hello world!</p>
+  <ul>
+    <li>eat</li>
+    <li>sleep</li>
+    <li>teach</li>
+    <li>read</li>
+  </ul>
 </body>
 
 </html>
